--- a/index.html
+++ b/index.html
@@ -4,40 +4,43 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Train Schedule</title>
-    <link rel="stylesheet" href="assets/css/reset.css">
+    <!-- <link rel="stylesheet" href="assets/css/reset.css"> -->
     <link rel="stylesheet" href="assets/css/style.css">
 </head>
 <body>
-
     <table>
-        <tr>
-          <th>Train Name</th>
-          <th>Destination</th>
-          <th>Frequency (mins)</th>
-          <th>Next Arrival</th>
-          <th>Minutes Away</th>
-        </tr>
-        <tr>
-          <td>Train 1</td>
-          <td>City, State</td>
-          <td>45</td>
-          <td>12:10 PM</td>
-          <td>43</td>
-        </tr>
+        <thead>
+            <tr>
+            <th>Train Name</th>
+            <th>Destination</th>
+            <th>Frequency (mins)</th>
+            <th>Next Arrival</th>
+            <th>Minutes Away</th>
+            </tr>
+        </thead>
+        <tbody id="table-rows">
+            <tr>
+            <td>Train 1</td>
+            <td>City, State</td>
+            <td>45</td>
+            <td>12:10 PM</td>
+            <td>43</td>
+            </tr>
+        </tbody>
     </table>
     
     <form>
         <label for="train-name-input">Train Name:</label><br>
-        <input type="text" id="train-name-input" name="train-name-input" value="Train 1"><br>
+        <input type="text" id="train-name-input" name="train-name-input" ><br>
 
         <label for="destination-input">Destination:</label><br>
-        <input type="text" id="destination-input" name="destination-input" value="City, State"><br>
+        <input type="text" id="destination-input" name="destination-input" ><br>
 
         <label for="first-time-input">First Train Time:</label><br>
-        <input type="text" id="first-time-input" name="first-time-input" value="10:10"><br>
+        <input type="text" id="first-time-input" name="first-time-input" ><br>
 
         <label for="frequency-input">Frequency:</label><br>
-        <input type="text" id="frequency-input" name="frequency-input" value=":45"><br>
+        <input type="text" id="frequency-input" name="frequency-input" ><br>
 
         <input type="submit" value="Submit" id="submit-button">
     </form>
