next arrival and mins away calcs now work but only for military time

--- a/index.html
+++ b/index.html
@@ -45,8 +45,11 @@
         <input type="submit" value="Submit" id="submit-button">
     </form>
 
-    <!-- Added link to the jQuery Library -->
+    <!-- jQuery Library -->
     <script src="https://cdnjs.cloudflare.com/ajax/libs/jquery/3.2.1/jquery.min.js"></script>
+
+    <!-- Moment.js -->
+  <script src="https://cdn.jsdelivr.net/momentjs/2.12.0/moment.min.js"></script>
     
     <script src="https://www.gstatic.com/firebasejs/7.14.3/firebase-app.js"></script>
     <!-- Specific Firebase products we want (Database) -->
