tweaked some layout, table entries now prepend

--- a/index.html
+++ b/index.html
@@ -15,7 +15,7 @@
         <h2 class="center-align train-header indigo darken-1 white-text">Train Schedule App</h2>
         <div class="section">
             <div class="row flex-row">
-                <div class="col s12 m5 l4">
+                <div class="col s12 m4 l4">
                     <form>
                         <div class="input-field">
                             <label for="train-name-input">Train Name:</label>
@@ -43,7 +43,7 @@
                         <!-- <input type="submit" value="Submit" id="submit-button"> -->
                     </form>
                 </div>
-                <div class="col s12 m7 l8">
+                <div class="col s12 m8 l8">
                 <table class="responsive-table highlight centered">
                     <thead class="grey-text text-darken-2">
                         <tr>
@@ -56,14 +56,14 @@
                         </tr>
                     </thead>
                     <tbody id="table-rows">
-                        <tr>
+                        <!-- <tr>
                         <td>Train 1</td>
                         <td>City, State</td>
-                        <td>45</td>
-                        <td>12:10 PM</td>
-                        <td>43</td>
-                        <td><button class="btn-floating btn-small waves-effect waves-light red darken-1"><i class="material-icons">block</i></button></td>
-                        </tr>
+                        <td>XX</td>
+                        <td>XX:XX PM</td>
+                        <td>XX</td>
+                        <td><button class="btn-floating btn-small red darken-1"><i class="material-icons">block</i></button></td>
+                        </tr> -->
                     </tbody>
                 </table>
                 </div>
